# llm-evaluation-survey-4312

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
datasets/chatbot_arena/: error.txt  sample_10.json
datasets/helm/: access_info.json
datasets/mmlu/: sample_10.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper/: main.tex  references.bib
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md  metadata.json
papers/pages/: 1710.04019_manifest.txt  1808.08271_manifest.txt  2009.03300_manifest.txt  2206.04615_manifest.txt  2207.05221_manifest.txt  2211.09110_manifest.txt  2306.05685_manifest.txt  2307.09302_manifest.txt  2310.16789_manifest.txt  2311.04850_manifest.txt  2403.04132_manifest.txt
results/: framework_results.json  model_performances.json  survey_taxonomy.json
src/: framework_implementations.py
